--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,23 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/style.css" />
-    <title>{{page.title}}</title>
+   {% include head.html %}
 </head>
 
 <body>
-    <header>
-
-    </header>
+    {% include site-header.html %}
 
     {{content}}
 
-    <footer>
-        
-    </footer>
+    {% include site-footer.html %}
+
+    {% include end-of-body-scripts.html %}
 </body>
 
 </html>
