--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -11,7 +11,7 @@
         <a href="#">Volunteer</a>
     </div>
     <div class="col-5 right">
-        <h3>Let's connect!</h3>
+        <h3>Let's connect</h3>
         <a href="mailto:thaistreetpawsdogrescue@gmail.com">Send us an E-Mail</a>
         <a href="https://www.instagram.com/thaistreetpaws_dogrescue/">
             <i class="fa-brands fa-instagram"></i>
