--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -5,6 +5,7 @@
         </a>
     </div>
     <nav class="col-9-bottom right">
+        <a href="/index.html">Home</a>
         <a href="/about.html">About</a>
         <a href="/help.html">How you can help</a>
         <a href="/adopt.html">Adopt</a>
