--- a/_includes/adoption-banner.html
+++ b/_includes/adoption-banner.html
@@ -3,7 +3,7 @@
     <h2 class="center">Meet the pups</h2>
 
     <!-- slick function -->
-    <div class="slider-container">
+    <div class="slick-carousel">
         <div class="slider-item bg-image"> </div>
         <div class="slider-item bg-image"> </div>
         <div class="slider-item bg-image"> </div>
