--- a/_includes/end-of-body-scripts.html
+++ b/_includes/end-of-body-scripts.html
@@ -2,13 +2,14 @@
 <!-- Add jQuery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<!-- slick js folder -->
+<!-- slick scripts -->
+<!-- 1. jquery -->
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<!-- 2. jquery migrate -->
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<!-- 3. slick cdn -->
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
-<!-- slick content -->
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="slick/slick.min.js"></script>
 
-<!-- my custom JS file (ALWAYS at the very end!) -->
-<script src="/scripts.js"></script>
+<!-- 4. manually added scripts.js (because I didnt add slick folder to project but used cdn instead) = my custom JS File (always at the end and not specific to Slick!)-->
+<script type="text/javascript" src="scripts.js"></script>
