--- a/_includes/adoption-banner.html
+++ b/_includes/adoption-banner.html
@@ -1,9 +1,15 @@
+
+
 <!-- adoption banner -->
-<section class="padded center">
+<section class="padded-lr padded-tb center bg-featured">
     <h2 class="center">Meet the pups</h2>
 
-    <!-- slick function -->
+    <!-- slick carousel -->
     <div class="slick-carousel">
+        <div class="slider-item bg-image" style="background-image: url('/images/TSP-1.jpg');"> </div>
+        <div class="slider-item bg-image"> </div>
+        <div class="slider-item bg-image"> </div>
+        <div class="slider-item bg-image"> </div>
         <div class="slider-item bg-image"> </div>
         <div class="slider-item bg-image"> </div>
         <div class="slider-item bg-image"> </div>
@@ -13,17 +19,3 @@
 
     <a href="/adopt.html" class="button">Adopt a dog</a>
 </section>
-
-
-<!-- 
-
-
-{% for dog in page.dogs %}
-
-    <div class="center padded-1">
-        <div class="bg-image portrait" style="background-image: url('{{dog._image}}');"></div>
-        <h3>{{dog.name}}</h3>
-        <p>I am {{dog.age}} years old.</p>
-    </div>
-    
-{% endfor %} -->
