--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,16 +1,16 @@
-<footer class="grid-spaceBetween padded vh60">
-    <div class="col-3">
+<footer class="grid-spaceBetween padded vh60 bg-dark light-text">
+    <div class="col-5">
         <h3>Thai Street Paws Rescue</h3>
         <a href="/about.html">Our story</a>
         <a href="/help.html">How you can help</a>
     </div>
-    <div class="col-3">
+    <div class="col-4">
         <h3>How you can help</h3>
         <a href="/adopt.html">Adopt</a>
         <a href="#">Donate</a>
         <a href="#">Volunteer</a>
     </div>
-    <div class="col-5 right">
+    <div class="col-3 right">
         <h3>Let's connect</h3>
         <a href="mailto:thaistreetpawsdogrescue@gmail.com">Send us an E-Mail</a>
         <a href="https://www.instagram.com/thaistreetpaws_dogrescue/">
