--- a/style.css
+++ b/style.css
@@ -23,11 +23,11 @@ a {border: 2px solid grey;} */
 
 /* ------------------------ CSS Variables ------------------------------- */
 :root {
-  --dark: #112c36;
+  --dark: #4c090e;
   --featured: #FAD9DB;
-  --medium: rgb(70, 178, 236);
+  --medium: #9D131C;
   --light: #FCEAEB;
-  --v-light: #ebfafe;
+  --v-light: #FCEAEB;
   --light-text: #fff;
   --featured-text:#9D131C;
 }
@@ -55,10 +55,10 @@ h4 { font-size: 1.6rem; }
 h5 { font-size: 1.4rem; }
 h6 { font-size: 1.2rem; }
 
-p, li {
+p, li, a {
   line-height: 1.4; 
   margin-bottom: 1rem;
-  font-weight: normal;
+  font-weight: 300;
   font-size: 1.1rem;
 }
 
@@ -77,7 +77,7 @@ p:last-child {
 .light-text     { color: var(--light-text);}
 .subtle         { opacity: 0.8;     }
 .subtitle       { font-size: 0.8rem; }
-.copyright      { font-size: 0.9rem; opacity: 0.8; margin-top: 3rem;}
+.copyright      { font-size: 0.9rem; opacity: 0.8;}
 
 /* Gridlex Flip Flex */
 
@@ -90,10 +90,11 @@ p:last-child {
 /* ------------------------ Buttons & Links ------------------------ */
 a {
     color: inherit;
+    text-decoration: none;
 }
 
 a:hover {
-  color: var(--featured-text); 
+  color: var(--featured); 
 }
 
 p a {
@@ -283,6 +284,21 @@ nav a:hover {
   }
 
 /* --------------------- Footer Styles -------------------------------- */
+footer a {
+  display: block;
+  line-height: 1;
+  font-size: 1.2rem;
+}
+
+
+/* --------------------- icons -------------------------------- */
+.fa-brands {
+  font-size: 2rem;
+}
+
+.fa-solid {
+  font-size: 3rem;
+}
 
 /* ---------------------- Adoption Slider ----------------------------- */
 /* slider */
@@ -291,7 +307,7 @@ nav a:hover {
 }
 
 .slider-item {
-  /* ------------ NEW NEW NEW NEW NEW ------ adjust padding between items */
+/*------ adjust padding between items */
   margin: 0.25rem;
   display: none;
   padding-bottom: 6%;
@@ -394,7 +410,25 @@ form button {
 
 
 /* -------------------- Page Name  ------------------------------------- */
+/* ---- quote ---- ##change font family to sleepco*/
+.quote-icon {
+  font-family: 'Catamaran', sans-serif;
+  font-size: 5rem;
+  display: inline-block;
+  /* für genauere Positionierung */
+  color: rgb(120,120,125);
+  line-height: 1;
+  margin-top: -0.5rem;
+}
 
+.text-md {
+  font-size: 2rem;
+  line-height: 1.1;
+}
+
+.font-weight-light { font-weight: 250;}
+
+.subtitle { font-size: 1.2rem; font-weight: 300; opacity: 0.6;}
 
 
 
