--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h2, h3, h4, h5, h6 {
   margin-bottom: 1.2rem;
 }
 
-h2 { font-size: 2rem; }
+h2 { font-size: 2.2rem; }
 h3 { font-size: 1.8rem; }
 h4 { font-size: 1.6rem; }
 h5 { font-size: 1.4rem; }
@@ -292,13 +292,17 @@ footer a {
 
 
 /* --------------------- icons -------------------------------- */
-.fa-brands {
-  font-size: 2rem;
+.fa-brands,
+.fa-regular {
+  font-size: 2.5rem;
+  display: inline-block;
 }
 
 .fa-solid {
   font-size: 3rem;
 }
+
+.inline-block { display: inline-block;}
 
 /* ---------------------- Adoption Slider ----------------------------- */
 /* slider */
