--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -12,12 +12,13 @@
     </div>
     <div class="col-3 right">
         <h3>Let's connect</h3>
-        <a href="mailto:thaistreetpawsdogrescue@gmail.com">via E-Mail <i class="fa-regular fa-envelope"></i></a>
-        <a href="https://www.instagram.com/thaistreetpaws_dogrescue/" class="inline-block padded-05 margin-r-05">
-            via Instagram<i class="fa-brands fa-instagram"></i>
+        <a href="mailto:thaistreetpawsdogrescue@gmail.com" class="inline-block padded-05 margin-r-03">
+            <i class="fa-regular fa-envelope"></i></a>
+        <a href="https://www.instagram.com/thaistreetpaws_dogrescue/" class="inline-block padded-05 margin-r-03">
+            <i class="fa-brands fa-instagram"></i>
         </a>
         <a href="https://www.facebook.com/thaistreetpawsrescue/" class="inline-block padded-05">
-            via Facebook<i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-square-facebook"></i>
         </a>
     </div>
     <div class="col-12 copyright center">© 2024</div>
