--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,4 +1,4 @@
-<footer class="grid-spaceBetween padded vh60 bg-dark light-text">
+<footer class="grid-spaceBetween padded bg-dark light-text">
     <div class="col-5">
         <h3>Thai Street Paws Rescue</h3>
         <a href="/about.html">Our story</a>
@@ -21,5 +21,5 @@
             <i class="fa-brands fa-square-facebook"></i>
         </a>
     </div>
-    <div class="col-12 copyright center">© 2024</div>
+    <div class="col-12 copyright center margin-t-2">© 2024</div>
 </footer>
