--- a/_includes/adoption-banner.html
+++ b/_includes/adoption-banner.html
@@ -6,7 +6,9 @@
     <div class="slick-carousel">
         {% assign adoptable-dogs = site.pages | where: 'path', 'adopt.html' | first %}
         {% for dog in adoptable-dogs.dogs %}
-        <div class="slider-item bg-image" style="background-image: url('{{dog._image}}');"></div>
+        <div class="slider-item">
+            <div class="bg-image portrait" style="background-image: url('{{dog._image}}');"></div>
+        </div>
     
         {% endfor %}
     </div>
