--- a/_includes/donation-banner.html
+++ b/_includes/donation-banner.html
@@ -1,6 +1,8 @@
+{% assign index = site.pages | where: 'path', 'index.html' | first %}
+
 <!-- donation banner -->
-<section class="grid">
-    <div class="col-12 donation-banner bg-dark light-text center vh40 grid-middle">
+<section class="grid bg-image bg-overlay" style="background-image: url('{{index.donation-banner_image}}')">
+    <div class="col-12 light-text center vh60 grid-middle">
         <div class="col-12">
             <h2>Help us to help dogs in need today!</h2>
             <a href="{{page.paypal_url}}" class="button margin-r-1">Donate</a>
