--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,10 +1,10 @@
-<header class="grid padded-lr padded-tb"> 
+<header class="grid padded-lr"> 
     <div class="col-2">
         <a href="/index.html">
             <img src="/images/logo.png" alt="Thai Street Paws Logo">
         </a>
     </div>
-    <nav class="col-10-bottom right">
+    <nav class="col-10-middle right margin-t-2">
         <a href="/index.html">Home</a>
         <a href="/about.html">About</a>
         <a href="/help.html">How you can help</a>
