--- a/style.css
+++ b/style.css
@@ -47,19 +47,20 @@ body {
 h2, h3, h4, h5, h6 {
   line-height: 1.1;
   margin-bottom: 1.5rem;
+  font-family: 'Bebas Neue', sans-serif;
 }
 
-h2 { font-size: 2.2rem; }
-h3 { font-size: 1.8rem; }
-h4 { font-size: 1.6rem; }
-h5 { font-size: 1.4rem; }
-h6 { font-size: 1.2rem; }
+h2 { font-size: 3rem; }
+h3 { font-size: 2.4rem; }
+h4 { font-size: 2rem; }
+h5 { font-size: 1.8rem; }
+h6 { font-size: 1.6rem; }
 
 p, li, a {
   line-height: 1.4; 
   margin-bottom: 1rem;
   font-weight: 300;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
 }
 
 
@@ -317,9 +318,8 @@ footer a {
 
 .slider-item {
 /*------ adjust padding between items */
-  margin: 0.25rem;
-  display: none;
-  padding-bottom: 6%;
+  margin: 0.4rem;
+  display: none;;
 }
 
 .slider-item:first-child {
