buttons styled and dog fotos styled

--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,6 +1,8 @@
 <footer class="grid-spaceBetween padded bg-dark light-text">
     <div class="col-5">
-        <h3>Thai Street Paws Rescue</h3>
+        <a href="/index.html">
+            <h3>Thai Street Paws Rescue</h3>
+        </a>
         <a href="/about.html">Our story</a>
         <a href="/help.html">How you can help</a>
     </div>
