--- a/style.css
+++ b/style.css
@@ -116,11 +116,20 @@ p a:hover {
     text-decoration: none;
     line-height: 1;
     padding: 0.5rem 1.5rem;
-    border: 1px solid;
+    border: 2px solid;
 }
 
 .button:hover {
-    color: var(--featured-text);
+    color: var(--light-text);
+    border: 2px solid var(--dark);
+    background-color: var(--dark)
+}
+
+/* banner button for dark bg */
+.light-text .button:hover {
+  color: var(--featured-text);
+  border: 2px solid;
+  background-color: var(--light-text);
 }
 
 .subtle-button {
