--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -4,6 +4,7 @@
             <h3>Thai Street Paws Rescue</h3>
         </a>
         <a href="/about.html">Our story</a>
+        <a href="/all-dogs.html">Our dogs</a>
         <a href="/help.html">How you can help</a>
     </div>
     <div class="col-4">
