--- a/_includes/adoption-banner.html
+++ b/_includes/adoption-banner.html
@@ -7,7 +7,7 @@
         {% assign all-dogs = site.pages | where: 'path', 'all-dogs.html' | first %}
         {% for dog in all-dogs.dogs %}
         <div class="slider-item">
-            <div class="bg-image portrait" style="background-image: url('{{dog._image}}');"></div>
+            <div class="bg-image portrait" style="background-image: url('{{dog.dog_image}}');"></div>
         </div>
     
         {% endfor %}
