--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -5,10 +5,10 @@
         </a>
     </div>
     <nav class="col-10-middle right margin-t-2">
-        <a href="/index.html">Home</a>
         <a href="/about.html">About</a>
         <a href="/help.html">How you can help</a>
         <a href="/adopt.html">Adopt</a>
+        <a href="/all-dogs.html">Our dogs</a>
         <a href="/contact.html">Contact</a>
     </nav>
 </header>
