--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,5 +1,5 @@
 <footer class="grid-spaceBetween padded bg-dark light-text">
-    <div class="col-5">
+    <div class="col-5_md-12 md-center md-margin-b md-margin-t">
         <a href="/index.html">
             <h3>Thai Street Paws Rescue</h3>
         </a>
@@ -7,13 +7,13 @@
         <a href="/all-dogs.html">Our dogs</a>
         <a href="/help.html">How you can help</a>
     </div>
-    <div class="col-4">
+    <div class="col-4_md-12 md-center md-margin-b">
         <h3>How you can help</h3>
         <a href="/adopt.html">Adopt</a>
         <a href="#">Donate</a>
         <a href="#">Volunteer</a>
     </div>
-    <div class="col-3 right">
+    <div class="col-3_md-12 right md-center md-margin-b">
         <h3>Let's connect</h3>
         <a href="mailto:thaistreetpawsdogrescue@gmail.com" class="inline-block padded-05 margin-r-03">
             <i class="fa-regular fa-envelope"></i></a>
