--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,14 +1,38 @@
-<header class="grid padded-lr"> 
-    <div class="col-2">
+<header class="grid-spaceBetween padded-lr sm-padded"> 
+    <!-- logo -->
+    <div class="col-2_md-3 sm-hide">
         <a href="/index.html">
             <img src="/images/logo.png" alt="Thai Street Paws Logo">
         </a>
     </div>
-    <nav class="col-10-middle right margin-t-2">
+    <!-- main menu -->
+    <nav class="col-10-middle_md-9 right margin-t-2 sm-hide">
         <a href="/about.html">About</a>
         <a href="/help.html">How you can help</a>
         <a href="/adopt.html">Adopt</a>
         <a href="/all-dogs.html">Our dogs</a>
         <a href="/contact.html">Contact</a>
     </nav>
+
+    <!-- logo mobile-->
+    <h1 class="col-10-middle sm-show margin-b-0">
+        <a href="/index.html">Thai <span class="red-text">Street Paws </span>Rescue
+        </a>
+    </h1>
+
+    <!-- hamburger button -->
+    <div class="col-1-bottom sm-show">
+        <div class="hamburger-button sm-padded">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+    </div>
+
+    <!-- hamburger menu -->
+     <nav class="mob-menu bg-dark light-text padded">
+        <a href="/about.html">About</a>
+        <a href="/help.html">How you can help</a>
+        <a href="/adopt.html">Adopt</a>
+        <a href="/all-dogs.html">Our dogs</a>
+        <a href="/contact.html">Contact</a>
+     </nav>
 </header>
