--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -6,7 +6,8 @@
         </a>
     </div>
     <!-- main menu -->
-    <nav class="col-10-middle_md-9 right margin-t-2 sm-hide">
+    <nav class="col-10-middle_md-9 right margin-t-2 md-hide">
+        <a href="/">Home</a>
         <a href="/about.html">About</a>
         <a href="/help.html">How you can help</a>
         <a href="/adopt.html">Adopt</a>
@@ -21,7 +22,7 @@
     </h1>
 
     <!-- hamburger button -->
-    <div class="col-1-bottom sm-show">
+    <div class="col-1-middle md-show">
         <div class="hamburger-button sm-padded">
             <i class="fa-solid fa-bars"></i>
         </div>
@@ -29,6 +30,7 @@
 
     <!-- hamburger menu -->
      <nav class="mob-menu bg-dark light-text padded">
+        <a href="/">Home</a>
         <a href="/about.html">About</a>
         <a href="/help.html">How you can help</a>
         <a href="/adopt.html">Adopt</a>
