--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -24,5 +24,5 @@
             <i class="fa-brands fa-square-facebook"></i>
         </a>
     </div>
-    <div class="col-12 copyright center margin-t-2">© 2024</div>
+    <a class="col-12 copyright center margin-t-2" href="https://onememorydesign.com">© 2024 OnememoryDesign.</a>
 </footer>
