--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -17,10 +17,10 @@
         <h3>Let's connect</h3>
         <a href="mailto:thaistreetpawsdogrescue@gmail.com" class="inline-block padded-05 margin-r-03">
             <i class="fa-regular fa-envelope"></i></a>
-        <a href="https://www.instagram.com/thaistreetpaws_dogrescue/" class="inline-block padded-05 margin-r-03">
+        <a href="https://www.instagram.com/thaistreetpaws_dogrescue/" class="inline-block padded-05 margin-r-03" target="_blank">
             <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="https://www.facebook.com/thaistreetpawsrescue/" class="inline-block padded-05">
+        <a href="https://www.facebook.com/thaistreetpawsrescue/" class="inline-block padded-05" target="_blank">
             <i class="fa-brands fa-square-facebook"></i>
         </a>
     </div>
