--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@ form button:hover {
 
 .capped-width-wide      { max-width: 1600px; margin: auto; }
 .capped-width           { max-width: 1300px; margin: auto; }
-.capped-width-narrow    { max-width: 1000px; margin: auto; }
+.capped-width-narrow    { max-width: 1100px; margin: auto; }
 .capped-width-v-narrow  { max-width: 800px;  margin: auto; }
 
 
@@ -592,6 +592,8 @@ form button:hover {
   .sm-padded     { padding: 5%; }
   .sm-padded-1   { padding: 1rem; }
   .sm-padded-05  { padding: 0.5rem; }
+  .sm-padded-t   { padding-top: 10%;}
+  .sm-padded-b   { padding-bottom: 10%;}
 
   .sm-padded-t-0 { padding-top: 0; }
   .sm-padded-b-0 { padding-bottom: 0; }
