--- a/_includes/donation-banner.html
+++ b/_includes/donation-banner.html
@@ -5,7 +5,7 @@
     <div class="col-12 light-text center vh60 grid-middle">
         <div class="col-12">
             <h2>Help us to help dogs in need today!</h2>
-            <a href="{{index.paypal_url}}" class="button margin-r-1 sm-block sm-margin-lr" target="_blank">Donate</a>
+            <a href="/donate.html" class="button margin-r-1 sm-block sm-margin-lr" target="_blank">Donate</a>
             <a href="/help.html" class="button sm-block sm-margin-lr">Find more ways to help</a>
         </div>
     </div>
