rescued-in added, padding banner added

--- a/_includes/donation-banner.html
+++ b/_includes/donation-banner.html
@@ -3,7 +3,7 @@
 <!-- donation banner -->
 <section class="grid bg-image bg-overlay" style="background-image: url('{{index.donation-banner_image}}')">
     <div class="col-12 light-text center vh60 grid-middle">
-        <div class="col-12">
+        <div class="col-12 padded">
             <h2>Help us to help dogs in need today!</h2>
             <a href="/donate.html" class="button margin-r-1 sm-block sm-margin-lr" target="_blank">Donate</a>
             <a href="/help.html" class="button sm-block sm-margin-lr">Find more ways to help</a>
